--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </ul>
     </div>
     
-    <!-- 分支題（僅選擇第一題的第二選項時顯示） -->
+    <!-- 分支題（第一題選擇選項2時顯示） -->
     <div id="question2" class="page">
       <h2>第二個問題</h2>
       <p>
@@ -125,20 +125,23 @@
   var resultTitleEl = container.querySelector('#resultTitle');
   var resultContentEl = container.querySelector('#resultContent');
   
-  // 修正後的結果資料：
-  // 第一題對應：
-  // 選項1 -> 結果1、選項3 -> 結果2、選項4 -> 結果3
-  // 分支題則照原有對應：5 -> 結果4、6 -> 結果5、7 -> 結果6、8 -> 結果7
+  /* 結果資料（重新對應第一題的選項）  
+     第一題對應：
+       - 選項1 → 結果1
+       - 選項3 → 結果2
+       - 選項4 → 結果3
+     分支題則依照選項 5~8 對應後續結果
+  */
   var results = {
     1: {
       title: '有面額的看起來比較開心 型',
       content: '你比較喜歡自己選擇想買什麼商品，所以禮品卡的類型深得你心。事實上，禮品卡也是最多公司選擇發放的紀念品類型，不過面額、適用的地點各有不同。也有公司會發放與自己公司相關的抵用券或是禮券。<br><br>代表公司：大部分的公司、王品（2727）、大魯閣（1432）<br>王品、大魯閣兩家公司，通常會發放與自己公司相關的抵用券。<br>王品2024年就曾發放價值3,000元的「王品股東大禮包」，內含王品門市現金抵用券、王品瘋美食APP、購物網抵用券，以及點數。<br>大魯閣的禮券也常物超所值，2025年便發800元消費抵用券，和8張玩樂買一送一勸，總價值超過4,000元，且零股就能領。'
     },
-    3: {
+    2: {
       title: '健康乾淨比較好 型',
-      content: '比起創意、禮券，你更希望股東會紀念品也能讓你健康、乾淨。贈送肥皂、洗衣用品、保健食品、精油、衛生紙的公司也占不小的比例。<br><br>代表公司：佳世達（2352）<br>佳世達雖然贈送的紀念品與健康相關，但在商品品項的選擇上也讓人眼睛一亮。<br>2024年，佳世達贈送「幸福物語蒸氣眼罩(迪士尼系列-米奇)」，2025年，佳世達則選擇「乖乖發財巾88抽」，乖乖從不只從零食變身為濕紙巾，88抽也隱含發財的祝福，可謂別出心裁。'
+      content: '比起創意、禮券，你更希望股東會紀念品也能讓你健康、乾淨。贈送肥皂、洗衣用品、保健食品、精油、衛生紙的公司也占不小的比例。<br><br>代表公司：佳世達（2352）<br>佳世達贈送的紀念品與健康相關，但在商品品項的選擇上也讓人眼睛一亮。<br>2024年，佳世達贈送「幸福物語蒸氣眼罩(迪士尼系列-米奇)」，2025年，佳世達則選擇「乖乖發財巾88抽」，乖乖從不只從零食變身為濕紙巾，88抽也隱含發財的祝福，可謂別出心裁。'
     },
-    4: {
+    3: {
       title: '公司經營才是最重要的 型',
       content: '你重視公司經營，認為股東會紀念品相對沒這麼重要。事實上，雖然會發配股東會紀念品的公司相當多，但也有完全不發放股東會紀念品的公司呢。<br><br>代表公司：台積電（2330）<br>台積電早年其實有發放股東會紀念品，但近年來已經沒有發放。<br>這些不發放股東會紀念品的公司，有時是因為成本考量、公司文化或政策，也有可能是受法規、公司治理的考量影響。<br>台積電共有逾157萬的股東，要發放股東會紀念品，費用會相當可觀。'
     },
@@ -160,7 +163,7 @@
     }
   };
   
-  // 更新進度條 (總共4個階段：0～3)
+  // 更新進度條 (共4個階段：0～3)
   function updateProgress(step) {
     var percent = (step / 3) * 100;
     progressBar.style.width = percent + '%';
@@ -189,12 +192,19 @@
     q1Buttons[i].addEventListener('click', function(e) {
       var value = parseInt(e.target.getAttribute('data-value'), 10);
       if (value === 1 || value === 3 || value === 4) {
-        // 選項1、3、4直接進入結果（階段3）
+        var key;
+        // 根據第一題選項調整映射：
+        // 若選擇1，key 為 1（結果1）
+        // 若選擇3，key 為 2（結果2）
+        // 若選擇4，key 為 3（結果3）
+        if (value === 1) { key = 1; }
+        else if (value === 3) { key = 2; }
+        else if (value === 4) { key = 3; }
         currentStep = 3;
         updateProgress(currentStep);
-        showResult(results[value]);
+        showResult(results[key]);
       } else if (value === 2) {
-        // 選項2則進入分支題（階段2）
+        // 選項2進入分支題
         currentStep = 2;
         updateProgress(currentStep);
         showPage('question2');
@@ -202,7 +212,7 @@
     });
   }
   
-  // 處理分支題的選項
+  // 處理分支題的選項（值為5~8）
   var q2Buttons = pages.question2.querySelectorAll('button');
   for (var j = 0; j < q2Buttons.length; j++) {
     q2Buttons[j].addEventListener('click', function(e) {
