--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   var results = {
     1: {
       title: '有面額的看起來比較開心 型',
-      content: '你比較喜歡自己選擇想買什麼商品，所以禮品卡的類型深得你心。事實上，禮品卡也是最多公司選擇發放的紀念品類型，不過面額、適用的地點各有不同。也有公司會發放與自己公司相關的抵用券或是禮券。<br><br>代表公司：大部分的公司、王品（2727）、大魯閣（1432）<br>王品、大魯閣兩家公司，通常會發放與自己公司相關的抵用券。<br>王品2024年就曾發放價值3,000元的「王品股東大禮包」，內含王品門市現金抵用券、王品瘋美食APP、購物網抵用券，以及點數。<br>大魯閣的禮券也常物超所值，2025年便發800元消費抵用券，和8張玩樂買一送一券，總價值超過4,000元，且零股就能領。'
+      content: '你比較喜歡自己選擇想買什麼商品，所以禮品卡的類型深得你心。事實上，禮品卡也是最多公司選擇發放的紀念品類型，不過面額、適用的地點各有不同。也有公司會發放與自己公司相關的抵用券或是禮券。<br><br>代表公司：大部分的公司、王品（2727）、大魯閣（1432）<br>王品、大魯閣兩家公司，通常會發放與自己公司相關的抵用券。<br>王品2025年將發放價值3,000元的「王品股東大禮包」，內含王品門市現金抵用券、王品瘋美食APP、購物網抵用券，以及點數。此外，和往年不同，今年更攜手星展銀，為股東們帶來最高1,000元的加碼好康<br>大魯閣的禮券也常物超所值，2025年便發800元消費抵用券，和8張玩樂買一送一券，總價值超過4,000元，且零股就能領。'
     },
     2: {
       title: '健康乾淨比較好 型',
