--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
   var results = {
     1: {
       title: '有面額的看起來比較開心 型',
-      content: '你比較喜歡自己選擇想買什麼商品，所以禮品卡的類型深得你心。事實上，禮品卡也是最多公司選擇發放的紀念品類型，不過面額、適用的地點各有不同。也有公司會發放與自己公司相關的抵用券或是禮券。<br><br>代表公司：大部分的公司、王品（2727）、大魯閣（1432）<br>王品、大魯閣兩家公司，通常會發放與自己公司相關的抵用券。<br>王品2025年將發放價值3,000元的「王品股東大禮包」，內含王品門市現金抵用券、王品瘋美食APP、購物網抵用券，以及點數。此外，和往年不同，今年更攜手星展銀，為股東們帶來最高1,000元的加碼好康<br>大魯閣的禮券也常物超所值，2025年便發800元消費抵用券，和8張玩樂買一送一券，總價值超過4,000元，且零股就能領。'
+      content: '你比較喜歡自己選擇想買什麼商品，所以禮品卡的類型深得你心。事實上，禮品卡也是最多公司選擇發放的紀念品類型，不過面額、適用的地點各有不同。也有公司會發放與自己公司相關的抵用券或是禮券。<br><br>代表公司：大部分的公司、王品（2727）、大魯閣（1432）<br>王品、大魯閣兩家公司，通常會發放與自己公司相關的抵用券。<br>王品2025年將發放價值3,000元的「王品股東大禮包」，內含王品門市現金抵用券、王品瘋美食APP、購物網抵用券，以及點數。此外，和往年不同，今年更攜手星展銀，為股東們帶來最高1,000元的加碼好康。<br>大魯閣的禮券也常物超所值，2025年便發800元消費抵用券，和8張玩樂買一送一券，總價值超過4,000元，且零股就能領。'
     },
     2: {
       title: '健康乾淨比較好 型',
@@ -159,7 +159,7 @@
     },
     8: {
       title: '給我更多創意 型',
-      content: '也有公司致力於讓股東猜紀念品猜破頭，但總是能出乎股東意料，端出最有創意的紀念品。<br><br>代表公司：中鋼（2002）、宏達電（2498）<br>中鋼可以說是眾多公司中，股東會紀念品出了名有創意的，而且還喜歡在紀念品命名上大玩「諧音梗」。2021年，中鋼推出「熊愛台灣棘輪起子工具組」，在台灣黑熊的造型裡，藏著各式工具金屬件。<br>2024年，也推出「砧心有您」抗菌多功能不鏽鋼砧板組，採兩層可拆卸式設計。這些紀念品的金屬件也都出自中鋼之手，可以說既打品牌又能獲得股東的心。<br>宏達電在紀念品上也十分用心，除了2014年令人震撼地送出「HTC One 32G」手機，也送過背包、風衣外套，2024年也送出「HTC雙面抗UV機能帽PLUS乙頂」，又時尚又實用。'
+      content: '也有公司致力於讓股東猜紀念品猜破頭，但總是能出乎股東意料，端出最有創意的紀念品。<br><br>代表公司：中鋼（2002）、宏達電（2498）<br>中鋼可以說是眾多公司中，股東會紀念品出了名有創意的，而且還喜歡在紀念品命名上大玩「諧音梗」。2021年，中鋼推出「熊愛台灣棘輪起子工具組」，在台灣黑熊的造型裡，藏著各式工具金屬件。<br>2024年，也推出「砧心有您」抗菌多功能不鏽鋼砧板組，採兩層可拆卸式設計。這些紀念品的金屬件也都出自中鋼之手，可以說既打品牌又能獲得股東的心。2025年，中鋼發放的則是「輕巧冷水瓶」，也是兼具實用性的優質紀念品。<br>宏達電在紀念品上也十分用心，除了2014年令人震撼地送出「HTC One 32G」手機，也送過背包、風衣外套，2024年也送出「HTC雙面抗UV機能帽PLUS乙頂」，又時尚又實用。'
     }
   };
   
