--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <li><button data-value="5">5. 有沒有可以吃或喝的紀念品？</button></li>
         <li><button data-value="6">6. 如果可以拿來裝東西也不錯？</button></li>
         <li><button data-value="7">7. 我喜歡聯名商品！有這樣的紀念品嗎？</button></li>
-        <li><button data-value="8">8. 我就愛完全猜不到的紀念，有沒有這種的？</button></li>
+        <li><button data-value="8">8. 我就愛完全猜不到的紀念品，有沒有這種的？</button></li>
       </ul>
     </div>
     
